force-app/main/default/objects/CashFlow__c/CashFlow__c.object-meta.xml
<CustomObject>
    <label>C/F</label>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>C/F ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C/F</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>