force-app/main/default/objects/CashFlow__c/fields/CashFlowName__c.field-meta.xml
<CustomField>
    <fullName>CashFlowName__c</fullName>
    <label>C/F NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>