force-app/main/default/objects/CashFlow__c/fields/ChiefAccoutant__c.field-meta.xml
<CustomField>
    <fullName>ChiefAccoutant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHIEF ACCOUNTANT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CFChiefAccountant</relationshipName>
    <type>Lookup</type>
</CustomField>