force-app/main/default/objects/CashFlow__c/fields/CPBeginCash__c.field-meta.xml
<CustomField>
    <fullName>CPBeginCash__c</fullName>
    <label>BEGINNING CASH &amp; CASH EQUIVALENTS-CP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>