force-app/main/default/objects/CashFlow__c/fields/CPEndCash__c.field-meta.xml
<CustomField>
    <fullName>CPEndCash__c</fullName>
    <label>CP-ENDING CASH &amp; CASH EQUIVALENTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>