force-app/main/default/objects/CashFlow__c/fields/CPFOB4__c.field-meta.xml
<CustomField>
    <fullName>CPFOB4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-FOB-4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>