force-app/main/default/objects/CashFlow__c/fields/CPIIB3__c.field-meta.xml
<CustomField>
    <fullName>CPIIB3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-IIB-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>