force-app/main/default/objects/CashFlow__c/fields/CPIOB3__c.field-meta.xml
<CustomField>
    <fullName>CPIOB3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-IOB-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>