force-app/main/default/objects/CashFlow__c/fields/CPNetCFDuringPeriod__c.field-meta.xml
<CustomField>
    <fullName>CPNetCFDuringPeriod__c</fullName>
    <label>CP-NET C/F DURING PERIOD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>