force-app/main/default/objects/CashFlow__c/fields/CPNetCFFromFinanceActivity__c.field-meta.xml
<CustomField>
    <fullName>CPNetCFFromFinanceActivity__c</fullName>
    <label>CP-NET C/F FROM FINANCE ACTIVITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>