force-app/main/default/objects/CashFlow__c/fields/CPNetCFFromOpeActivity__c.field-meta.xml
<CustomField>
    <fullName>CPNetCFFromOpeActivity__c</fullName>
    <label>CP-NET C/F FROM OPE ACTIVITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>