force-app/main/default/objects/CashFlow__c/fields/CPOIS1__c.field-meta.xml
<CustomField>
    <fullName>CPOIS1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-OIS-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>