force-app/main/default/objects/CashFlow__c/fields/CPOOO1__c.field-meta.xml
<CustomField>
    <fullName>CPOOO1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CP-OOO-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>