force-app/main/default/objects/CashFlow__c/fields/ItemBeginCash__c.field-meta.xml
<CustomField>
    <fullName>ItemBeginCash__c</fullName>
    <defaultValue>&quot;Beginning cash and cash equivalents&quot;</defaultValue>
    <label>BEGINNING CASH &amp; CASH EQUIVALENTS-ITEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>