force-app/main/default/objects/CashFlow__c/fields/ItemEndCash__c.field-meta.xml
<CustomField>
    <fullName>ItemEndCash__c</fullName>
    <defaultValue>&quot;Ending cash and cash equivalents&quot;</defaultValue>
    <label>ITEM-ENDING CASH AND CASH EQUIVALENTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>