force-app/main/default/objects/CashFlow__c/fields/ItemFER1__c.field-meta.xml
<CustomField>
    <fullName>ItemFER1__c</fullName>
    <defaultValue>&quot;Effects of fluctuations in foreign exchange rates&quot;</defaultValue>
    <label>ITEM-FER-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>