force-app/main/default/objects/CashFlow__c/fields/ItemFIB2__c.field-meta.xml
<CustomField>
    <fullName>ItemFIB2__c</fullName>
    <defaultValue>&quot;Short-term and long-term loans received&quot;</defaultValue>
    <label>ITEM-FIB-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>