force-app/main/default/objects/CashFlow__c/fields/ItemFIB4__c.field-meta.xml
<CustomField>
    <fullName>ItemFIB4__c</fullName>
    <label>ITEM-FIB-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>