force-app/main/default/objects/CashFlow__c/fields/ItemFOB1__c.field-meta.xml
<CustomField>
    <fullName>ItemFOB1__c</fullName>
    <defaultValue>&quot;Repayments of capital contributions to owners and re-purchases of stocks already issued&quot;</defaultValue>
    <label>ITEM-FOB-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>