force-app/main/default/objects/CashFlow__c/fields/ItemFOB2__c.field-meta.xml
<CustomField>
    <fullName>ItemFOB2__c</fullName>
    <defaultValue>&quot;Loan principal amounts repaid&quot;</defaultValue>
    <label>ITEM-FOB-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>