force-app/main/default/objects/CashFlow__c/fields/ItemFOB3__c.field-meta.xml
<CustomField>
    <fullName>ItemFOB3__c</fullName>
    <defaultValue>&quot;Payments for financial leasehold assets&quot;</defaultValue>
    <label>ITEM-FOB-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>