force-app/main/default/objects/CashFlow__c/fields/ItemIIB3__c.field-meta.xml
<CustomField>
    <fullName>ItemIIB3__c</fullName>
    <defaultValue>&quot;Withdrawals of investments in other entities&quot;</defaultValue>
    <label>ITEM-IIB-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>