force-app/main/default/objects/CashFlow__c/fields/ItemIOB1__c.field-meta.xml
<CustomField>
    <fullName>ItemIOB1__c</fullName>
    <defaultValue>&quot;Purchases and construction of fixed assets and other long-term assets&quot;</defaultValue>
    <label>ITEM-IOB-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>