force-app/main/default/objects/CashFlow__c/fields/ItemIOB3__c.field-meta.xml
<CustomField>
    <fullName>ItemIOB3__c</fullName>
    <defaultValue>&quot;Investments in other entities&quot;</defaultValue>
    <label>ITEM-IOB-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>