force-app/main/default/objects/CashFlow__c/fields/ItemNetCFDuringPeriod__c.field-meta.xml
<CustomField>
    <fullName>ItemNetCFDuringPeriod__c</fullName>
    <defaultValue>&quot;Net cash flows during the period&quot;</defaultValue>
    <label>ITEM-NET C/F DURING PERIOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>