force-app/main/default/objects/CashFlow__c/fields/ItemNetCFFromInvActivity__c.field-meta.xml
<CustomField>
    <fullName>ItemNetCFFromInvActivity__c</fullName>
    <defaultValue>&quot;II. Cash flows from investing activities&quot;</defaultValue>
    <label>ITEM-NET C/F FROM INVEST ACTIVITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>