force-app/main/default/objects/CashFlow__c/fields/ItemNetCFFromOpeActivity__c.field-meta.xml
<CustomField>
    <fullName>ItemNetCFFromOpeActivity__c</fullName>
    <defaultValue>&quot;I. Cash flows from operating activities&quot;</defaultValue>
    <label>ITEM-NET CF FROM OPE ACTIVITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>