force-app/main/default/objects/CashFlow__c/fields/ItemOIO1__c.field-meta.xml
<CustomField>
    <fullName>ItemOIO1__c</fullName>
    <defaultValue>&quot;Other gains&quot;</defaultValue>
    <label>ITEM-OIO-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>