force-app/main/default/objects/CashFlow__c/fields/ItemOOO1__c.field-meta.xml
<CustomField>
    <fullName>ItemOOO1__c</fullName>
    <defaultValue>&quot;Other disbursements&quot;</defaultValue>
    <label>ITEM-OOO-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>