force-app/main/default/objects/CashFlow__c/fields/ItemOOP1__c.field-meta.xml
<CustomField>
    <fullName>ItemOOP1__c</fullName>
    <defaultValue>&quot;Payments to suppliers&quot;</defaultValue>
    <label>ITEM-OOP-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>