force-app/main/default/objects/CashFlow__c/fields/ItemOOP3__c.field-meta.xml
<CustomField>
    <fullName>ItemOOP3__c</fullName>
    <defaultValue>&quot;Loan interests already paid&quot;</defaultValue>
    <label>ITEM-OOP-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>