force-app/main/default/objects/CashFlow__c/fields/ItemOOP4__c.field-meta.xml
<CustomField>
    <fullName>ItemOOP4__c</fullName>
    <defaultValue>&quot;Payments for corporate income tax&quot;</defaultValue>
    <label>ITEM-OOP-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CashFlowItem</valueSetName>
    </valueSet>
</CustomField>