force-app/main/default/objects/CashFlow__c/fields/NoEndCash__c.field-meta.xml
<CustomField>
    <fullName>NoEndCash__c</fullName>
    <label>NO-ENDING CASH AND CASH EQUIVALENTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>