force-app/main/default/objects/CashFlow__c/fields/NoFIB2__c.field-meta.xml
<CustomField>
    <fullName>NoFIB2__c</fullName>
    <label>NO-FIB-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>