force-app/main/default/objects/CashFlow__c/fields/NoFOB4__c.field-meta.xml
<CustomField>
    <fullName>NoFOB4__c</fullName>
    <label>NO-FOB-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>