force-app/main/default/objects/CashFlow__c/fields/NoIIB1__c.field-meta.xml
<CustomField>
    <fullName>NoIIB1__c</fullName>
    <label>NO-IIB-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>