force-app/main/default/objects/CashFlow__c/fields/NoIIB2__c.field-meta.xml
<CustomField>
    <fullName>NoIIB2__c</fullName>
    <label>NO-IIB-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>