force-app/main/default/objects/CashFlow__c/fields/NoIOB2__c.field-meta.xml
<CustomField>
    <fullName>NoIOB2__c</fullName>
    <label>NO-IOB-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>