force-app/main/default/objects/CashFlow__c/fields/NoNetCFDuringPeriod__c.field-meta.xml
<CustomField>
    <fullName>NoNetCFDuringPeriod__c</fullName>
    <label>NO-NET CF DURING PERIOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>