force-app/main/default/objects/CashFlow__c/fields/NoNetCFFromFinanceActivity__c.field-meta.xml
<CustomField>
    <fullName>NoNetCFFromFinanceActivity__c</fullName>
    <label>NO-NET CF FROM FINANCE ACTIVITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>