force-app/main/default/objects/CashFlow__c/fields/NoNetCFFromInvActivity__c.field-meta.xml
<CustomField>
    <fullName>NoNetCFFromInvActivity__c</fullName>
    <label>NO-NET CF FROM INVEST ACTIVITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>