force-app/main/default/objects/CashFlow__c/fields/NoOOO1__c.field-meta.xml
<CustomField>
    <fullName>NoOOO1__c</fullName>
    <label>NO-OOO-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeStatementNo</valueSetName>
    </valueSet>
</CustomField>