force-app/main/default/objects/CashFlow__c/fields/PPEndCash__c.field-meta.xml
<CustomField>
    <fullName>PPEndCash__c</fullName>
    <label>PP-ENDING CASH &amp; CASH EQUIVALENTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>