force-app/main/default/objects/CashFlow__c/fields/PPFIB1__c.field-meta.xml
<CustomField>
    <fullName>PPFIB1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-FIB-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>