force-app/main/default/objects/CashFlow__c/fields/PPIIB4__c.field-meta.xml
<CustomField>
    <fullName>PPIIB4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-IIB-4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>