force-app/main/default/objects/CashFlow__c/fields/PPNetCFFromFinanceActivity__c.field-meta.xml
<CustomField>
    <fullName>PPNetCFFromFinanceActivity__c</fullName>
    <label>PP-NET C/F FROM FINANCE ACTIVITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>