force-app/main/default/objects/CashFlow__c/fields/PPNetCFFromOpeActivity__c.field-meta.xml
<CustomField>
    <fullName>PPNetCFFromOpeActivity__c</fullName>
    <label>PP-NET C/F FROM OPE ACTIVITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>