force-app/main/default/objects/CashFlow__c/fields/PPOIO1__c.field-meta.xml
<CustomField>
    <fullName>PPOIO1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-OIO-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>