force-app/main/default/objects/CashFlow__c/fields/PPOIS1__c.field-meta.xml
<CustomField>
    <fullName>PPOIS1__c</fullName>
    <label>PP-OIS-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>