force-app/main/default/objects/CashFlow__c/fields/PPOOP2__c.field-meta.xml
<CustomField>
    <fullName>PPOOP2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PP-OOP-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>