force-app/main/default/objects/CashFlow__c/fields/PreparedBy__c.field-meta.xml
<CustomField>
    <fullName>PreparedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREPARED BY</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CFPreparedBy</relationshipName>
    <type>Lookup</type>
</CustomField>