force-app/main/default/objects/CashFlow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CashFlowName__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>CPNetCFFromOpeActivity__c</columns>
    <columns>CPNetCFFromInvActivity__c</columns>
    <columns>CPNetCFFromFinanceActivity__c</columns>
    <columns>CPNetCFDuringPeriod__c</columns>
    <columns>CPBeginCash__c</columns>
    <columns>CPEndCash__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>